--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,7 @@
 # Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
 
-## What is Nextra?
+Welcome to CoffeeCode's documentation site. Here you will find all the information you need to get started with our products and services.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## What is CoffeeCodes?
 
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+We are a software development company that specializes in creating web applications, mobile applications, and websites. We also provide consulting services to help you with your software development needs.
