--- a/pages/EV/trips/GetUserTripsByLongestDuration.mdx
+++ b/pages/EV/trips/GetUserTripsByLongestDuration.mdx
@@ -7,7 +7,7 @@ sidebar_position: 8
 
 ## Overview
 
-The `GetUserTripsByLongestDuration` API endpoint retrieves user trips sorted by the longest duration. This endpoint is useful for fetching and displaying the longest trips of a user. 
+The `GetUserTripsByLongestDuration` API endpoint retrieves user trips sorted by the longest duration. This endpoint is useful for fetching and displaying the longest trips of a user.
 
 ## Endpoint
 
@@ -43,7 +43,7 @@ eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJwaG9uZSI6Iis5MTk4MTI5NDA3MDYiLCJ1aWQiOiI
 
 | Header        | Value                             |
 |---------------|-----------------------------------|
-| Authorization | Bearer {your_token}               |
+| Authorization | Bearer your_token                 |
 
 ## Example Request
 
