--- a/pages/EV/trips/GetUserTripsBySmallestDistance.mdx
+++ b/pages/EV/trips/GetUserTripsBySmallestDistance.mdx
@@ -31,7 +31,7 @@ Include the following header in the request:
 
 | Header           | Value                         |
 |------------------|-------------------------------|
-| Authorization    | Bearer <YOUR_TOKEN_HERE>      |
+| Authorization    | Bearer YOUR_TOKEN_HERE        |
 
 ### Response
 
