--- a/pages/EV/subscriptions/createSubscription.mdx
+++ b/pages/EV/subscriptions/createSubscription.mdx
@@ -16,16 +16,14 @@ The `createSubscription` API endpoint is used to create new subscriptions. This 
 ## Headers
 
 The following headers should be included in the request:
-
-\```markdown
+```
 X-Karma-Admin-Auth: CoffeeCodesMelloBxAparnaEewqjbdkwqbkdjoehui3r7328grehjvdjvchjiuiudhsjkhkjsadab
-\```
-
+```
 ## Request Body
 
 The request body should be in JSON format and include the details of the subscriptions to be created. Below is the structure for the JSON body:
 
-\```json
+```json
 [
     {
         "id": "sub_001",
@@ -73,7 +71,7 @@ The request body should be in JSON format and include the details of the subscri
         "security_deposit": 10
     }
 ]
-\```
+```
 
 ### Fields Description
 
