--- a/pages/EV/bikes/GetBikesByTopSpeedGT.mdx
+++ b/pages/EV/bikes/GetBikesByTopSpeedGT.mdx
@@ -18,7 +18,7 @@ The `GetBikesByTopSpeedGT` API fetches a list of bikes that have a top speed gre
 
 | Key           | Value       |
 | ------------- | ----------- |
-| Authorization | Bearer {token} |
+| Authorization | Bearer token |
 
 ### Parameters
 
